--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,12 @@ streamlit>=1.31.0
 
 langchain>=0.1.0
 langchain-core>=0.1.0
+langchain-community>=0.0.20
 langchain-google-genai>=1.0.0
 
 google-generativeai>=0.3.2
 
+SQLAlchemy>=2.0.0
 psycopg2-binary>=2.9.9
-sqlalchemy>=2.0.0
 
 python-dotenv>=1.0.0
