--- a/requirements.txt
+++ b/requirements.txt
@@ -83,5 +83,6 @@ watchdog==6.0.0
 websockets==15.0.1
 yarl==1.22.0
 zstandard==0.25.0
-reportlab
-PyMuPDF>=1.24.10
+reportlab>=4.0.0
+pymupdf
+pillow
